update index html

--- a/public/index.html
+++ b/public/index.html
@@ -39,4 +39,12 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <footer>
+    This project was coded by
+    <a href="https://www.shecodes.io/">SheCodes</a> and is open-sourced on
+    <a
+      href="https://github.com/FatimadelaIglesia/-project-workspace-workspace.code-workspace"
+      >GitHub</a
+    >and hosted on Netlify
+  </footer>
 </html>
