--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,13 @@
   </body>
   <footer>
     This project was coded by
-    <a href="https://www.shecodes.io/">SheCodes</a> and is open-sourced on
+    <a href="https://www.shecodes.io" target="_blank" rel="noreferrer"
+      >SheCodes</a
+    >and is open-sourced on
     <a
       href="https://github.com/FatimadelaIglesia/-project-workspace-workspace.code-workspace"
+      target="_blank"
+      rel="noreferrer"
       >GitHub</a
     >and hosted on Netlify
   </footer>
